--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "scripts": {
         "serve": "gulp serve",
         "dev": "gulp watch",
-        "build": "gulp build --production"
+        "build": "gulp build --production",
+        "lint": "npm run lint:js && npm run lint:css",
+        "lint:js": "eslint '**/*.js' --config .eslintrc.js --fix",
+        "lint:css": "stylelint '**/*.scss' --config .stylelintrc.js --fix",
+        "format": "npm run format:html && npm run format:js && npm run format:css",
+        "format:html": "prettier '**/*.html' --config .prettierrc.js --write --ignore-path .gitignore",
+        "format:js": "prettier '**/!(*.min).js' --config .prettierrc.js --write --ignore-path .gitignore",
+        "format:css": "prettier '**/*.scss' --config .prettierrc.js --write --ignore-path .gitignore"
     },
     "author": "Daniele De Luca",
     "license": "MIT",
@@ -15,6 +22,11 @@
         "@rollup/plugin-commonjs": "^22.0.2",
         "@rollup/plugin-node-resolve": "^14.1.0",
         "browser-sync": "^2.27.10",
+        "eslint": "^8.25.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-prettier": "^4.2.1",
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "^8.0.0",
         "gulp-mode": "^1.1.0",
@@ -24,8 +36,13 @@
         "gulp-sass": "^5.1.0",
         "gulp-sourcemaps": "^3.0.0",
         "node-sass": "^7.0.3",
+        "prettier": "^2.7.1",
         "rollup-plugin-terser": "^7.0.2",
-        "sass": "^1.55.0"
+        "sass": "^1.55.0",
+        "stylelint": "^14.13.0",
+        "stylelint-config-prettier-scss": "^0.0.1",
+        "stylelint-config-sass-guidelines": "^9.0.1",
+        "stylelint-prettier": "^2.0.0"
     },
     "dependencies": {
         "@splidejs/splide": "^4.1.2",
