--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "rocket",
     "version": "1.0.1",
-    "description": "A lightweight HTML, CSS, and JavaScript framework.",
+    "description": "Lightweight HTML, CSS, and JavaScript framework.",
     "main": "gulpfile.js",
     "scripts": {
         "serve": "gulp serve",
