Switch to Vite from Gulp

--- a/package.json
+++ b/package.json
@@ -1,48 +1,37 @@
 {
     "name": "rocket",
-    "version": "1.0.1",
     "description": "Lightweight HTML, CSS, and JavaScript framework.",
-    "main": "gulpfile.js",
-    "scripts": {
-        "serve": "gulp serve",
-        "dev": "gulp watch",
-        "build": "gulp build --production",
-        "lint": "npm run lint:js && npm run lint:css",
-        "lint:js": "eslint '**/*.js' --config .eslintrc.json --fix",
-        "lint:css": "stylelint '**/*.scss' --config .stylelintrc --fix",
-        "format": "npm run format:html && npm run format:js && npm run format:css",
-        "format:html": "prettier '**/*.html' --config .prettierrc --write --ignore-path .gitignore",
-        "format:js": "prettier '**/!(*.min).js' --config .prettierrc --write --ignore-path .gitignore",
-        "format:css": "prettier '**/*.scss' --config .prettierrc --write --ignore-path .gitignore"
-    },
+    "version": "1.0.1",
+    "type": "module",
     "author": "Daniele De Luca",
     "license": "MIT",
+    "browserslist": [
+        "last 2 versions"
+    ],
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "lint": "npm run lint:js && npm run lint:css",
+        "lint:js": "eslint 'src/assets/js/**/*.js' --config .eslintrc.json --fix",
+        "lint:css": "stylelint 'src/assets/scss/**/*.scss' --config .stylelintrc --fix",
+        "format": "npm run format:js && npm run format:css",
+        "format:js": "prettier 'src/assets/js/**/*.js' --config .prettierrc --write --ignore-path .gitignore",
+        "format:css": "prettier 'src/assets/scss/**/*.scss' --config .prettierrc --write --ignore-path .gitignore"
+    },
     "devDependencies": {
-        "@rollup/plugin-babel": "^6.0.2",
-        "@rollup/plugin-commonjs": "^23.0.2",
-        "@rollup/plugin-node-resolve": "^15.0.1",
-        "browser-sync": "^2.27.10",
+        "autoprefixer": "^10.4.13",
         "eslint": "^8.26.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-prettier": "^4.2.1",
-        "gulp": "^4.0.2",
-        "gulp-autoprefixer": "^8.0.0",
-        "gulp-mode": "^1.1.0",
-        "gulp-plumber": "^1.2.1",
-        "gulp-rename": "^2.0.0",
-        "gulp-rollup-2": "^1.3.1",
-        "gulp-sass": "^5.1.0",
-        "gulp-sourcemaps": "^3.0.0",
-        "node-sass": "^7.0.3",
-        "prettier": "^2.7.1",
-        "rollup-plugin-terser": "^7.0.2",
         "sass": "^1.55.0",
         "stylelint": "^14.14.0",
         "stylelint-config-prettier-scss": "^0.0.1",
         "stylelint-config-sass-guidelines": "^9.0.1",
-        "stylelint-prettier": "^2.0.0"
+        "stylelint-prettier": "^2.0.0",
+        "vite": "^4.0.0"
     },
     "dependencies": {
         "@splidejs/splide": "^4.1.3",
