--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
         "es2021": true
     },
     "extends": ["eslint:recommended", "airbnb-base", "plugin:prettier/recommended"],
-    "ignorePatterns": [".gitignore", "**/*.min.js"],
+    "ignorePatterns": ".gitignore",
     "parserOptions": {
         "ecmaVersion": "latest"
     },
