Replace 'aurora-icons' with '@sparkleui/sparkle-icons'

--- a/package.json
+++ b/package.json
@@ -66,6 +66,6 @@
         "./scss/": "./src/scss/"
     },
     "dependencies": {
-        "aurora-icons": "^1.0.0"
+        "@sparkleui/sparkle-icons": "^1.0.1"
     }
 }
