Update `keywords` section in package.json

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "last 2 versions"
     ],
     "keywords": [
+        "sparkle-ui",
+        "sparkle",
         "css",
         "sass",
         "responsive",
