--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,5 +1,5 @@
 {
-    "extends": ["stylelint-config-sass-guidelines", "stylelint-config-prettier-scss"],
+    "extends": ["stylelint-config-prettier-scss"],
     "plugins": ["stylelint-prettier"],
     "ignorePatterns": ".gitignore",
     "rules": {
