--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.29.0",
         "eslint-plugin-prettier": "^5.0.1",
+        "prettier": "^3.1.1",
         "sass": "^1.69.5",
         "stylelint": "^15.11.0",
         "stylelint-prettier": "^4.1.0",
