--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "prettier": "^3.1.1",
         "sass": "^1.69.5",
         "stylelint": "^15.11.0",
+        "stylelint-config-standard-scss": "^11.1.0",
         "stylelint-prettier": "^4.1.0",
         "vite": "^5.0.7",
         "vitepress": "^1.0.0-rc.31"
