--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "sass": "^1.69.5",
         "stylelint": "^15.11.0",
         "stylelint-config-standard-scss": "^11.1.0",
+        "stylelint-order": "^6.0.4",
         "stylelint-prettier": "^4.1.0",
         "vite": "^5.0.7",
         "vitepress": "^1.0.0-rc.31"
