Update `lint:*` and `format:*` scripts

--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
         "build": "vite build",
         "preview": "vite preview",
         "lint": "npm run lint:js && npm run lint:css",
-        "lint:js": "eslint 'src/js/**/*.js' --config .eslintrc --fix",
-        "lint:css": "stylelint 'src/scss/**/*.scss' --config .stylelintrc --fix",
+        "lint:js": "eslint 'src/js/**/*.js' --config .eslintrc && prettier 'src/js/**/*.js' --config .prettierrc --ignore-path .gitignore --check",
+        "lint:css": "stylelint 'src/scss/**/*.scss' --config .stylelintrc && prettier 'src/scss/**/*.scss' --config .prettierrc --ignore-path .gitignore --check",
         "format": "npm run format:js && npm run format:css",
-        "format:js": "prettier 'src/js/**/*.js' --config .prettierrc --write --ignore-path .gitignore",
-        "format:css": "prettier 'src/scss/**/*.scss' --config .prettierrc --write --ignore-path .gitignore",
+        "format:js": "eslint 'src/js/**/*.js' --config .eslintrc --fix && prettier 'src/js/**/*.js' --config .prettierrc --ignore-path .gitignore --write",
+        "format:css": "stylelint 'src/scss/**/*.scss' --config .stylelintrc --fix && prettier 'src/scss/**/*.scss' --config .prettierrc --ignore-path .gitignore --write",
         "docs:dev": "vitepress dev docs",
         "docs:build": "vitepress build docs",
         "docs:preview": "vitepress preview docs"
