--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "docs:preview": "vitepress preview docs"
     },
     "devDependencies": {
+        "@sparkleui/stylelint-config": "^1.0.0",
         "autoprefixer": "^10.4.16",
         "eslint": "^8.55.0",
         "eslint-config-airbnb-base": "^15.0.0",
@@ -50,8 +51,6 @@
         "prettier": "^3.1.1",
         "sass": "^1.69.5",
         "stylelint": "^16.0.2",
-        "stylelint-config-standard-scss": "^12.0.0",
-        "stylelint-order": "^6.0.4",
         "stylelint-prettier": "^5.0.0",
         "vite": "^5.0.8",
         "vitepress": "^1.0.0-rc.31"
