--- a/package.json
+++ b/package.json
@@ -30,15 +30,11 @@
         "dev": "vite",
         "build": "vite build",
         "preview": "vite preview",
-        "lint": "npm run lint:js && npm run lint:css",
-        "lint:js": "eslint 'src/js/**/*.js' --config .eslintrc && prettier 'src/js/**/*.js' --config .prettierrc --ignore-path .gitignore --check",
-        "lint:css": "stylelint 'src/scss/**/*.scss' --config .stylelintrc && prettier 'src/scss/**/*.scss' --config .prettierrc --ignore-path .gitignore --check",
-        "format": "npm run format:js && npm run format:css",
-        "format:js": "eslint 'src/js/**/*.js' --config .eslintrc --fix && prettier 'src/js/**/*.js' --config .prettierrc --ignore-path .gitignore --write",
-        "format:css": "stylelint 'src/scss/**/*.scss' --config .stylelintrc --fix && prettier 'src/scss/**/*.scss' --config .prettierrc --ignore-path .gitignore --write",
-        "docs:dev": "vitepress dev docs",
-        "docs:build": "vitepress build docs",
-        "docs:preview": "vitepress preview docs"
+        "lint": "stylelint \"src/**/*.scss\" --fix --cache && eslint \"src/**/*.js\" --fix --cache",
+        "format": "prettier \"src/**/*.{scss,js}\" --write --cache",
+        "docs-dev": "vitepress dev docs",
+        "docs-build": "vitepress build docs",
+        "docs-preview": "vitepress preview docs"
     },
     "devDependencies": {
         "@sparkleui/stylelint-config": "^1.0.0",
